tests/NormalTests/paczka1/fuzzy1/51500118.err
Error in line 2: A2M6 SM33 63,7
Error in line 3: L26QaJ4 A149 64,8
Error in line 8: bZS7 S433 99,0
Error in line 11: ZVWZYCel S326 92,8
Error in line 24: A246 S433 2,1
Error in line 16: L26QaJ4 A149 48,6
Error in line 25: A246 A246 15,4
Error in line 26: L26QaJ4 S433 69,2
